--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -18,16 +18,14 @@
       <p class="more_contrast_text"><a href="/admin/booking/config"><%=t.booking_console.configuration%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/config/general"><%=t.booking_console_configuration.general_configuration%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/config/payment"><%=t.booking_console_configuration.payment%></a></p>
-      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/config/templates"><%=t.booking_console_configuration.templates%></a></p>     
+      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/config/templates"><%=t.booking_console_configuration.templates%></a></p> 
+      <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-extras"><%=t.booking_console.extras%></a></p>  
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/season-defs"><%=t.rates_console.seasons%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/rates/factor-defs"><%=t.rates_console.factors%></a></p>
       <p class="smaller_text left-margin top-space bottom-space"><a href="/admin/booking/booking-place-defs"><%=t.booking_console.places%></a></p>              
   </div>
   <div class="top-space bottom-space">
       <p class="more_contrast_text"><a href="/admin/booking/booking-categories"><%=t.booking_console.categories%></a></p>	
-  </div>	
-  <div class="top-space bottom-space">
-     <p class="more_contrast_text"><a href="/admin/booking/booking-extras"><%=t.booking_console.extras%></a></p>  
   </div>	
   <div class="top-space bottom-space">
      <p class="more_contrast_text"><a href="/admin/booking/booking-items"><%=t.booking_console.items%></a></p>
