--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -41,13 +41,13 @@
       </td>
       <td class="table-cell">
            <%% if (entity.calendar_id && entity.calendar_id != null) { %>
-                <div class="form-button"><a href="/admin/calendar/events/<%%=entity.calendar_id%>">
+                <div class="form-button green-white-button"><a href="/admin/calendar/events/<%%=entity.calendar_id%>">
                   <%=t.booking_category_management.table.calendar%>
                 </a></div>
            <%% } %>
 
            <%% if (entity.price_definition_id && entity.price_definition_id != null) { %>
-                <div class="form-button"><a href="/admin/rates/prices/<%%=entity.price_definition_id%>">
+                <div class="form-button green-white-button"><a href="/admin/rates/prices/<%%=entity.price_definition_id%>">
                   <%=t.booking_category_management.table.prices%>
                 </a></div>
            <%% } %>
