--- a/views/booking_extras_management.erb
+++ b/views/booking_extras_management.erb
@@ -42,7 +42,7 @@
       </td>
       <td class="table-cell">
            <%% if (entity.price_definition_id && entity.price_definition_id != null) { %>
-              <div class="form-button">
+              <div class="form-button green-white-button">
                 <a href="/admin/rates/prices/<%%=entity.price_definition_id%>">
                   <%=t.booking_extra_management.table.prices%>
                 </a>
