--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -32,6 +32,7 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
   	
     this.onRenderEntities = function(entities) {
       $('.elements-search').show(); 
+      $('.new-entity-button').hide();
     }
 
     this.onEdit = function(entity) {
