--- a/views/booking_pickup_return_place_defs_management.erb
+++ b/views/booking_pickup_return_place_defs_management.erb
@@ -41,7 +41,7 @@
         <%%= entity.name %>
       </td>
       <td class="table-cell">
-              <div>
+              <div class="form-button green-white-button">
                 <a href="/admin/booking/booking-places/<%%=entity.id%>">
                   <%=t.booking_places_definition_management.table.places%>
                 </a>
