--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -12,7 +12,9 @@
   	padding-right: 2px;
   }
 </style>
-<h2><%=t.bookings_planning.title%></h2>
+<div class="top-navigation-bar">
+<h2 class="entity-title"><%=t.bookings_planning.title%></h2>
+</div>
 <div class="top-margin bottom-margin-1line">
 	<div class="more_contrast_text centered_text top-margin-1line bottom-margin-2lines">
 		<span id="prev" class="all-space over_cursor background-color-2 color-2 all-border-solid">&lt;</span>
@@ -22,7 +24,7 @@
 		<span id="next" class="all-space over_cursor background-color-2 color-2 all-border-solid">&gt;</span>
 	</div>
 </div>
-<div>
+<div class="left-margin right-margin">
 <table id="planning_table" style="table-layout: fixed; margin: 0 auto">
 </table>
 <div class="top-margin-2lines">
